# brightness

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  add-systemd-service.sh  brightness-auto.service  brightness.cpp  brightness_backend.cpp  brightness_backend.h  config.cpp  config.h  config.ini  main.cpp  own-main.cpp  veml7700.cpp  veml7700.h
